fix miss overflow

--- a/assets/shared/styles/main/general.scss
+++ b/assets/shared/styles/main/general.scss
@@ -2,7 +2,7 @@
 body {
   background-color: $main-background-color;
   color: $main-color;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .test-container {
